updated_for_mobile_devices

--- a/memo.html
+++ b/memo.html
@@ -39,6 +39,7 @@
             border-radius: 2%;
             display: flex;
             justify-content: center;
+            height: 25vw;
             align-items: center;
         }
 
@@ -89,7 +90,7 @@
         <h3 class="text-white" style="font-size: 2vw;">A Reminding Android App</h3>
     </div>
     <div class="container-fluid section-bgColor pb-5 text-white"
-        style="padding-left: 15%; padding-right: 15%; text-align: justify; font-size: 1.8vw; padding-top: 10%;">
+        style="padding-left: 15%; padding-right: 15%; text-align: justify; font-size: 2.5vw; padding-top: 10%;">
         <p> An android application is constructed to solve the issue of remembering everything. It has features where it's users can write important stuffs in the notes and in order
             to get reminded about any sort of work then they could use alarming feature.</p>
 
