--- a/rov.html
+++ b/rov.html
@@ -38,6 +38,7 @@
             background: #fff;
             border-radius: 2%;
             display: flex;
+            height: 25vw;
             justify-content: center;
             align-items: center;
         }
@@ -89,7 +90,7 @@
         <h3 class="text-white" style="font-size: 2vw;">Remotely Operated Underwater Vehicle</h3>
     </div>
     <div class="container-fluid section-bgColor py-5 text-white"
-        style="padding-left: 15%; padding-right: 15%; text-align: justify; font-size: 1.8vw;">
+        style="padding-left: 15%; padding-right: 15%; text-align: justify; font-size: 2.5vw;">
         <p>This project focuses on developing an underwater robotic vehicle platform with optional ground control for
             executing various tests and missions at different autonomy levels. Designed in SolidWorks,
             the vehicle features an open-frame structure for enhanced control at low speeds and modularity for diverse
