--- a/drone.html
+++ b/drone.html
@@ -38,6 +38,7 @@
             background: #fff;
             border-radius: 2%;
             display: flex;
+            height: 25vw;
             justify-content: center;
             align-items: center;
         }
@@ -89,7 +90,7 @@
         <h3 class="text-white" style="font-size: 2vw;">A Nano Surveillance Drone</h3>
     </div>
     <div class="container-fluid section-bgColor pb-5 text-white"
-        style="padding-left: 15%; padding-right: 15%; text-align: justify; font-size: 1.8vw; padding-top: 10%;">
+        style="padding-left: 15%; padding-right: 15%; text-align: justify; font-size: 2.5vw; padding-top: 10%;">
         <p>This project focuses on developing a nano Drone manipulated wirelessly, leverage them for surveillance tasks. 
             Robot Operating System (ROS) and Gazebo was used for the wireless navigation of the drone over
             the particular area.
