--- a/hms.html
+++ b/hms.html
@@ -38,6 +38,7 @@
             background: #000000;
             border-radius: 2%;
             display: flex;
+            height: 25vw;
             justify-content: center;
             align-items: center;
         }
@@ -89,7 +90,7 @@
         <h3 class="text-white" style="font-size: 2vw;">Hotel Management System</h3>
     </div>
     <div class="container-fluid section-bgColor pb-5 text-white"
-        style="padding-left: 15%; padding-right: 15%; text-align: justify; font-size: 1.8vw; padding-top: 10%;">
+        style="padding-left: 15%; padding-right: 15%; text-align: justify; font-size: 2.5vw; padding-top: 10%;">
         <p>This project focuses on developing a web application for the Hotel Management to streamline hotel operations and enhance the overall guest experience.
             The front-end is built using HTML, CSS, JavaScript, and Bootstrap, ensuring a responsive and visually appealing interface. HTML provides the structural foundation, CSS handles styling, 
             JavaScript adds interactivity, and Bootstrap ensures the application is mobile-friendly. This combination allows users to easily navigate the application, check room availability, and make reservations online.
