--- a/medvisor.html
+++ b/medvisor.html
@@ -38,6 +38,7 @@
             background: #fff;
             border-radius: 2%;
             display: flex;
+            height: 25vw;
             justify-content: center;
             align-items: center;
         }
@@ -89,7 +90,7 @@
         <h3 class="text-white" style="font-size: 2vw;">Medical Visualisation through AR</h3>
     </div>
     <div class="container-fluid section-bgColor pb-5 text-white"
-        style="padding-left: 15%; padding-right: 15%; text-align: justify; font-size: 1.8vw; padding-top: 10%;">
+        style="padding-left: 15%; padding-right: 15%; text-align: justify; font-size: 2.5vw; padding-top: 10%;">
         <p>MedVisor represents a groundbreaking advancement in healthcare technology, offering an innovative Augmented Reality (AR) solution 
             in the form of smart glasses. Through the integration of Speech-to-Text conversion and a sophisticated Large Language Model (LLM), 
             MedVisor empowers patients with access to precise and comprehensive answers to any medical query they may have. In the realm of immersive healthcare, MedVisor transforms the patient experience by offering real-time insights and visualizations of medical data directly within their field of view. 
