--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">  
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <style>
     .profile-bg {
@@ -108,21 +109,21 @@
       </div>
     </div>
   </div>
-  <div class="container-fluid section-head bg-color" id="About" style="height: 13vw;">
-    <h2 class="fw-bold h-font small-head">About Me</h2>
+  <div class="container-fluid section-head bg-color " id="About" style="height: 13vw;">
+    <h2 class="fw-bold h-font small-head" data-aos="zoom-in-up">About Me</h2>
     <p class="big-head h-font text-center">About Me</p>
   </div>
   <div class="container-fluid section-bgColor pt-4 pe-3 pb-3">
     <div class="row justify-content-around">
-      <div class="col-5 col-md-3">
+      <div class="col-5 col-md-3" data-aos="zoom-in-right" data-aos-duration="1000">
         <div class="container-fluid rounded-circle bg-dark bg-gradient mt-2">
           <img src="images/profileUp.png" class="rounded-circle img-fluid" alt="myImage"
             style="width:100%; margin-top: 2%;">
         </div>
       </div>
-      <div class="col-6 col-md-6 text-white mt-4 text-center d-flex justify-content-center">
+      <div class="col-6 col-md-6 text-white mt-4 text-center d-flex justify-content-center" data-aos="zoom-in-left" data-aos-duration="1000">
         <p class="text-end " style="font-size: 2vw;">
-          I am a pre-final year B.Tech student majoring in Instrumentation and Control Engineering and minoring in Computer
+          I am a final year B.Tech student majoring in Instrumentation and Control Engineering and minoring in Computer
           Science and Engineering
           at NIT Trichy. My prime interest lies in Application Development and Robotics, and I am an active member of
           the
@@ -134,12 +135,12 @@
     </div>
   </div>
   <div class="container-fluid w-100 text-center bg-color" id="Education" style="height: 13vw; position: relative;">
-    <h2 class="fw-bold h-font small-head">Education</h2>
+    <h2 class="fw-bold h-font small-head" data-aos="zoom-in-up">Education</h2>
     <p class="big-head h-font text-center" style="z-index: 0;">Education</p>
   </div>
   <div class="container-fluid section-bgColor pt-md-4 pt-2 pe-5 pb-2" style="max-height: 100%;">
     <div class="row justify-content-around">
-      <div class="col-6 col-md-6 text-white mt-4 text-center d-flex justify-content-center">
+      <div class="col-6 col-md-6 text-white mt-4 text-center d-flex justify-content-center" data-aos="zoom-in-right" data-aos-duration="1000">
         <p class="text-start align-middle" style="font-size: 1.8vw;">
           B.Tech<br>
           Major in Instrumentation and Control Engineering<br>
@@ -158,7 +159,7 @@
     </div>
   </div>
   <div class="container-fluid w-100 text-center bg-color" id="Projects" style="height: 13vw; position: relative;">
-    <h2 class="fw-bold h-font small-head">Projects</h2>
+    <h2 class="fw-bold h-font small-head" data-aos="zoom-in-up">Projects</h2>
     <p class="big-head h-font text-center" style="z-index: 0;">Projects</p>
   </div>
   <div class="container-fluid section-bgColor">
@@ -222,13 +223,13 @@
   </div>
 
   <div class="container-fluid w-100 text-center bg-color" id="Skills" style="height: 13vw; position: relative;">
-    <h2 class="fw-bold h-font small-head">My Skills</h2>
+    <h2 class="fw-bold h-font small-head" data-aos="zoom-in-up">My Skills</h2>
     <p class="big-head h-font text-center" style="z-index: 0;">My Skills</p>
   </div>
   <div class="container-fluid section-bgColor pt-5 pb-5 ps-5 pe-5">
     <h2 class="h-font text-white" style="font-size: 3vw;">Software:</h2>
     <div class="row justify-content-around">
-      <div class="col-md-5 mb-4 animate-box">
+      <div class="col-md-5 mb-4 animate-box" data-aos="zoom-in-right" data-aos-duration="1000">
         <div class="progress-wrap ftco-animate">
           <h3 class="text-white" style="font-size: 2vw;">HTML</h3>
           <div class="progress">
@@ -239,7 +240,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-5 mb-4 animate-box">
+      <div class="col-md-5 mb-4 animate-box" data-aos="zoom-in-left" data-aos-duration="1000">
         <div class="progress-wrap ftco-animate">
           <h3 class="text-white" style="font-size: 2vw;">CSS</h3>
           <div class="progress">
@@ -250,7 +251,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-5 mb-4 animate-box">
+      <div class="col-md-5 mb-4 animate-box" data-aos="zoom-in-right" data-aos-duration="1000">
         <div class="progress-wrap ftco-animate">
           <h3 class="text-white" style="font-size: 2vw;">BootStrap</h3>
           <div class="progress">
@@ -261,7 +262,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-5 mb-4 animate-box">
+      <div class="col-md-5 mb-4 animate-box" data-aos="zoom-in-left" data-aos-duration="1000">
         <div class="progress-wrap ftco-animate">
           <h3 class="text-white" style="font-size: 2vw;">JavaScript</h3>
           <div class="progress">
@@ -272,7 +273,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-5 mb-4 animate-box">
+      <div class="col-md-5 mb-4 animate-box" data-aos="zoom-in-right" data-aos-duration="1000">
         <div class="progress-wrap ftco-animate">
           <h3 class="text-white" style="font-size: 2vw;">PHP</h3>
           <div class="progress">
@@ -283,7 +284,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-5 mb-4 animate-box">
+      <div class="col-md-5 mb-4 animate-box" data-aos="zoom-in-left" data-aos-duration="1000">
         <div class="progress-wrap ftco-animate">
           <h3 class="text-white" style="font-size: 2vw;">SQL</h3>
           <div class="progress">
@@ -294,7 +295,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-5 mb-4 animate-box">
+      <div class="col-md-5 mb-4 animate-box" data-aos="zoom-in-right" data-aos-duration="1000">
         <div class="progress-wrap ftco-animate">
           <h3 class="text-white" style="font-size: 2vw;">Flutter</h3>
           <div class="progress">
@@ -308,7 +309,7 @@
     </div>
     <h2 class="h-font text-white" style="font-size: 3vw;">Hardware:</h2>
     <div class="row justify-content-around">
-      <div class="col-md-5 mb-4 animate-box">
+      <div class="col-md-5 mb-4 animate-box" data-aos="zoom-in-right" data-aos-duration="1000">
         <div class="progress-wrap ftco-animate">
           <h3 class="text-white" style="font-size: 2vw;">Robotics</h3>
           <div class="progress">
@@ -320,7 +321,7 @@
         </div>
       </div>
       <div class="col-md-5 mb-4 animate-box">
-        <div class="progress-wrap ftco-animate">
+        <div class="progress-wrap ftco-animate" data-aos="zoom-in-left" data-aos-duration="1000">
           <h3 class="text-white" style="font-size: 2vw;">Embedded Systems</h3>
           <div class="progress">
              <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80"
@@ -331,7 +332,7 @@
         </div>
       </div>
       <div class="col-md-5 mb-4 animate-box">
-        <div class="progress-wrap ftco-animate">
+        <div class="progress-wrap ftco-animate" data-aos="zoom-in-right" data-aos-duration="1000">
           <h3 class="text-white" style="font-size: 2vw;">Automation and Controls</h3>
           <div class="progress">
              <div class="progress-bar bg-success" role="progressbar" aria-valuenow="75"
@@ -345,7 +346,7 @@
   </div>
 
   <div class="container-fluid w-100 text-center bg-color" id="Affiliation" style="height: 13vw; position: relative;">
-    <h2 class="fw-bold h-font small-head">Affiliation</h2>
+    <h2 class="fw-bold h-font small-head" data-aos="zoom-in-up">Affiliation</h2>
     <p class="big-head h-font text-center" style="z-index: 0;">Affiliation</p>
   </div>
   <div class="container-fluid section-bgColor pt-5 pb-2 ps-4 pe-4">
@@ -354,13 +355,13 @@
     </h2>
     <hr class="text-white ms-5" style="width: 70%;">
     <div class="row justify-content-around">
-      <div class="col-md-3 col-5">
+      <div class="col-md-3 col-5" data-aos="zoom-in-right" data-aos-duration="1000">
         <div class="container-fluid rounded-circle bg-dark bg-gradient mt-2">
           <img src="images/RMI-logo-removebg.png"  class="rounded img-fluid mb-2">
         </div>
         
       </div>
-      <div class="col-md-7 col-5">
+      <div class="col-md-7 col-5" data-aos="zoom-in-left" data-aos-duration="1000">
         <p class="text-white mt-3" style="font-size: 1.8vw;">
           RMI is NIT Trichy's official Robotics and Technical Research Club, 
           with a prime focus on Robotics-oriented research projects. 
@@ -425,10 +426,14 @@
 <h6 class="text-center bg-dark text-white p-3 m-0">Designed and Developed by AK</h6>
 
     
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>  
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous">
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <!-- Initialize Swiper -->
   <script>
