--- a/medvisor.html
+++ b/medvisor.html
@@ -55,36 +55,38 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light nav-bgColor px-lg-3 py-lg-2 shadow-lg sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand ms-5 me-5 h-font fw-bold fs-3" href="index.html">Anas's Portfolio</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link me-2" aria-current="page" href="index.html#About">About Me</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link me-2" href="index.html#Education">Education</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link me-2" href="index.html#Projects">Projects</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link me-2" href="index.html#Skills">Skills</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link me-2" href="index.html#Affiliation">Affiliation</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link me-2" href="#Contact">Contact Me</a>
-                    </li>
-                </ul>
-            </div>
+          <a class="navbar-brand ms-5 me-5 h-font fw-bold fs-3" href="#" style="color: #289fa1;">Anas's Portfolio</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link me-2" aria-current="page" href="index.html#About" id="navAbout">About Me</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link me-2" href="index.html#Education" id="navEducation">Education</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link me-2" href="index.html#Experience" id="navExperience">Experience</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link me-2" href="index.html#Skills" id="navSkills">Skills</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link me-2 link-active" href="index.html#Projects" id="navProjects">Projects</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link me-2" href="index.html#Affiliation" id="navAffiliation">Affiliation</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link me-2" href="index.html#Contact" id="navContact">Contact Me</a>
+              </li>
+            </ul>
+          </div>
         </div>
-    </nav>
+      </nav>
     <div class="section-bg d-flex justify-content-center align-items-center flex-column">
         <h1 class="text-white" style="font-size: 3vw;">MedVisor</h1>
         <h3 class="text-white" style="font-size: 2vw;">Medical Visualisation through AR</h3>
